syntax = "proto3";

package demo;

option go_package = "demo/";

message GetItemLikeReq {
  repeated int32 ids = 1;
}

message ItemLikesResp {
  map<int32, int32> result = 1;
}

service ItemLikeService {
  rpc GetItemLikes(GetItemLikeReq) returns (ItemLikesResp);
}